// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlertDialog > renders a an alert dialog 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_3_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Update profile
  </button>
</DocumentFragment>
`;

exports[`AlertDialog > renders a an dialog trigger 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_0_"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Update profile
  </button>
</DocumentFragment>
`;

exports[`AlertDialog > should accept and close alert dialog 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_9_"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Update profile
  </button>
</DocumentFragment>
`;

exports[`AlertDialog > should open and close alert dialog 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_6_"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Update profile
  </button>
</DocumentFragment>
`;
